<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/animation_back"
    android:layoutDirection="rtl"
    >

    <TableRow
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp">

        <Button

            android:layout_margin="2dp"
            android:background="@drawable/up_btns"
            android:padding="20dp"
            android:text="@string/lev1"
            android:id="@+id/lev1"
            android:textSize="18sp" />

        <Button
            android:enabled="false"
            android:layout_margin="2dp"
            android:background="@drawable/up_btns"
            android:padding="20dp"
            android:text="@string/lev2"
            android:id="@+id/lev2"
            android:textSize="18sp" />

        <Button
            android:enabled="false"
            android:layout_margin="2dp"
            android:background="@drawable/up_btns"
            android:padding="20dp"
            android:text="@string/lev3"
            android:id="@+id/lev3"
            android:textSize="18sp" />
    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <Button
            android:enabled="false"
            android:layout_margin="2dp"
            android:background="@drawable/up_btns"
            android:padding="20dp"
            android:text="@string/lev4"
            android:id="@+id/lev4"
            android:textSize="18sp" />

        <Button
            android:enabled="false"
            android:layout_margin="2dp"
            android:background="@drawable/up_btns"
            android:padding="20dp"
            android:text="@string/lev5"
            android:id="@+id/lev5"
            android:textSize="20sp" />

        <Button
            android:enabled="false"
            android:layout_margin="2dp"
            android:background="@drawable/up_btns"
            android:padding="20dp"
            android:text="@string/lev6"
            android:id="@+id/lev6"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:gravity="center"
        android:layout_marginBottom="10dp">

        <Button
            android:enabled="false"
            android:layout_margin="2dp"
            android:background="@drawable/up_btns"
            android:padding="20dp"
            android:text="@string/lev7"
            android:id="@+id/lev7"
            android:textSize="18sp" />

        <Button
            android:enabled="false"
            android:layout_margin="2dp"
            android:background="@drawable/up_btns"
            android:padding="20dp"
            android:text="@string/lev8"
            android:id="@+id/lev8"
            android:textSize="18sp" />
        <Button
            android:enabled="false"
            android:layout_margin="2dp"
            android:background="@drawable/up_btns"
            android:padding="20dp"
            android:text="@string/lev9"
            android:id="@+id/lev9"
            android:textSize="18sp" />
    </TableRow>

</TableLayout>