<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <TextView
        android:id="@+id/msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/expose_letter"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/you_have"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/amount_of_points"
        android:textColor="@color/black"
        android:textSize="27sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/expose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/up_btns"
        android:padding="5dp"
        android:text="@string/exposde_approve"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button

        android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/up_btns"
        android:padding="5dp"
        android:text="@string/cancel"
        android:textSize="15sp"
        android:textStyle="bold" />


</LinearLayout>