<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/animation_back"
    android:layoutDirection="rtl">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!--    //BUTTONS AREA-->
        <LinearLayout
            android:id="@+id/top_btns"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_letter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@drawable/up_btns"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/add_L"
                android:textSize="15sp" />

            <Button
                android:id="@+id/reveal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:background="@drawable/up_btns"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/reveal_song"
                android:textSize="15sp" />

            <Button
                android:id="@+id/clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/up_btns"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/clear"
                android:textSize="15sp" />
        </LinearLayout>

        <!--    //PICTURES AREA-->
        <LinearLayout
            android:id="@+id/pic_area"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="4.6"
            android:background="@color/lilach"
            android:paddingStart="7dp"
            android:paddingEnd="7dp"
            android:paddingBottom="37dp">

            <ImageView
                android:id="@+id/hora_img"
                android:layout_width="400dp"
                android:layout_height="270dp"
                android:contentDescription="@string/hai_img"
                android:src="@drawable/hasake" />

        </LinearLayout>
        <!--    //SUBMIT BUTTON PLACE-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/check_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/up_btns"
                android:gravity="center"
                android:text="@string/check"
                android:textSize="20sp" />
        </LinearLayout>
        <!--    //EDITTEXT_PLACE-->

        <LinearLayout
            android:id="@+id/txt_place"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/char1"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:background="@drawable/edit_txt"
                android:gravity="center"
                android:inputType="text"
                android:maxLength="1" />

            <EditText
                android:id="@+id/char2"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:background="@drawable/edit_txt"
                android:gravity="center"
                android:inputType="text"
                android:maxLength="1" />

            <EditText
                android:id="@+id/char3"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:background="@drawable/edit_txt"
                android:gravity="center"
                android:inputType="text"
                android:maxLength="1" />

            <EditText
                android:id="@+id/char4"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:background="@drawable/edit_txt"
                android:gravity="center"
                android:inputType="text"
                android:maxLength="1" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>